fix selected player drawer z-index and menu link hover padding

--- a/app/views/components/menu/menu.styl
+++ b/app/views/components/menu/menu.styl
@@ -143,11 +143,11 @@ $primaryColorDark = #115293
 
 .menu__links
   margin-top 8px
-  padding 0 16px 8px
+  padding-bottom 8px
   a
     display flex
     align-items center
-    padding 3px 0
+    padding 3px 16px
     font-weight 400
     font-size 12px
     line-height 16px
