--- a/app/views/components/selected-player/selected-player.styl
+++ b/app/views/components/selected-player/selected-player.styl
@@ -2,6 +2,9 @@
   height calc(100% - 64px)
   border-radius 36px 36px 0 0
 
+.MuiModal-root:has(> .MuiPaper-root.selected__player-paper)
+  z-index 1400
+
 .selected__player-header
   display flex
   align-items stretch
